--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <span class="userHandle"><em>user handle<em></span>
     <span class="action"><strong>action</strong></span>
     
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
